<resources>
    <string name="app_name">Faihaa Schools</string>
    <string name="absent"> absent</string>
    <string name="homework">home work</string>
    <string name="honorboard">honor board</string>
    <string name="table">table</string>
    <string name="activities">activities</string>
    <string name="rate">student rate</string>
    <string name="row_name">row name</string>
    <string name="tuition_fees">tuition fees</string>
    <string name="transfer_fees_1">trans fees</string>
    <string name="student_fees">Student Fees</string>
    <string name="name">Name</string>
    <string name="classrooms_name">Class</string>
    <string name="sub_stages_name">SubStage</string>
    <string name="school_name">School</string>
    <string name="transport_type">Transport type</string>
    <string name="payment_type">Payment type</string>
    <string name="current_all_fees">All Fees</string>
    <string name="current_remain">Remain Fees</string>
    <string name="current_paid">Current Paid</string>
    <string name="news">Public News</string>
    <string name="arrive">About Us</string>
    <string name="classes">Classes</string>
    <string name="contact">Contact Us</string>
    <string name="logout">logout</string>
    <string name="log_in">Login.....</string>
    <string name="child_fees">children fees</string>
    <string name="show_student_details">Details</string>
    <string name="something_error">error something haywire</string>
    <string name="details">Details</string>
    <string name="exam_name">Exam name</string>
    <string name="std_name">Student name</string>
    <string name="sub_name">subject name</string>
    <string name="eval_degree">Degree</string>
    <string name="address">Location</string>
    <string name="title_activity_location">Map</string>
    <string name="school_fees">school fees</string>
    <string name="name_school">school name</string>
    <string name="school_trans">transport fees 1</string>
    <string name="school_trans2">transport fees 2</string>
    <string name="copyright">CopyRight</string>
    <string name="fee">TranFees</string>
    <string name="game">Mental Games</string>
    <string name="nationalty">Nationality</string>
    <string name="gender">Gender</string>
    <string name="stage">Stage</string>
    <string name="stud_name">Student name</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ident">Identity</string>
    <string name="ch_nat">Choose Nationality</string>
    <string name="ch_gender">Choose Gender</string>
    <string name="ch_stage">Choose Stage</string>
    <string name="empty_name">Name is empty</string>
    <string name="empty_ident">Identity is empty</string>
    <string name="empty_phone">Phone is empty</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="reg">Register</string>
    <string name="visit">Skip</string>
    <string name="nat">Nationality</string>
    <string name="stag">Stages</string>
    <string name="rege">Registering...</string>
    <string name="success_regester">Successfully register</string>
    <string name="error_try_later">Error try again later</string>
    <string name="ok">OK</string>

    <string-array name="gender_array">
        <item>@string/gender</item>
        <item>@string/male</item>
        <item>@string/female</item>

    </string-array>

</resources>
