<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/game"
                        android:textColor="@color/colorPrimary"

                        />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_news"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn1"
                    android:drawableBottom="@drawable/newspaper"
                    android:paddingBottom="10dp"
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_school_fees"

                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn1"
                    android:drawableBottom="@drawable/map"
                    android:paddingBottom="10dp"
                    android:text="@string/arrive"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/classes"

                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:layout_margin="10dp"
                android:background="@drawable/btn1"
                android:drawableLeft="@drawable/blackboard"
                android:drawablePadding="30dp"
                android:paddingLeft="10dp"
                android:text="@string/classes"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_student_fees"

                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn1"
                    android:drawableBottom="@drawable/coins"
                    android:paddingBottom="10dp"
                    android:text="@string/student_fees"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn1"
                    android:drawableBottom="@drawable/exit"
                    android:paddingBottom="10dp"
                    android:text="@string/logout"
                    android:textColor="@color/white"

                    android:textSize="16sp" />

            </LinearLayout>

            <!--
                <com.szugyi.circlemenu.view.CircleLayout
                    android:id="@+id/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:isRotating="false"
                    app:radius="110dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icon"
                        android:id="@+id/absent"
                        android:src="@drawable/icon10"
                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icon"
                        android:id="@+id/homework"
                        android:src="@drawable/work"
                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icon"
                        android:id="@+id/activity"
                        android:src="@drawable/icon3"

                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icon"
                        android:id="@+id/news"
                        android:src="@drawable/icon4"

                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icon"
                        android:id="@+id/table"
                        android:src="@drawable/icon5"

                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icone"
                        android:id="@+id/arrive"
                        android:src="@drawable/icon6"

                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icone"
                        android:id="@+id/sharf"
                        android:src="@drawable/icon7"

                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icone"
                        android:id="@+id/rsoom"
                        android:src="@drawable/icon8"

                        />

                    <com.szugyi.circlemenu.view.CircleImageView
                        style="@style/icone"
                        android:id="@+id/state"
                        android:src="@drawable/icon9"

                        />

                </com.szugyi.circlemenu.view.CircleLayout>
            -->


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:elevation="8dp"
            app:backgroundTint="@color/white"
            app:srcCompat="@drawable/logoather" />

    </FrameLayout>
</ScrollView>