<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context="com.Alatheer.elashry.Faihaa.Activities.Register_New_Year_Activity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/toolbar"
        android:layout_alignParentTop="true"
        >
    </android.support.design.widget.AppBarLayout>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:layout_below="@+id/appBar"
        android:layout_marginBottom="10dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"

        xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:contentPadding="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"

        >
        <LinearLayout
            android:layout_below="@id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:src="@drawable/logo1"
                android:scaleType="centerCrop"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                >



                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/nationalty"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    />
                <Spinner
                    android:id="@+id/spinner_nat"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    app:backgroundTint="@color/colorPrimary"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".7"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="12sp"


                    />
                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    app:backgroundTint="@color/colorPrimary"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/stage"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"

                    />

                <Spinner
                    android:id="@+id/spinner_stage"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    app:backgroundTint="@color/colorPrimary"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                >



                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/stud_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"

                    />
                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.3"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/std_name_edt_bg"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/stud_name"
                    android:singleLine="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/ident"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"

                    />
                <EditText
                    android:id="@+id/edt_ident"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1.3"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/std_name_edt_bg"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/ident"
                    android:singleLine="true"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="5dp"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".7"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"

                    />
                <com.lamudi.phonefield.PhoneInputLayout
                    android:id="@+id/edt_phone"
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    android:layout_height="wrap_content"

                    >

                </com.lamudi.phonefield.PhoneInputLayout>

            </LinearLayout>
            <Button
                android:id="@+id/btn_send"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="@string/reg"
                android:background="@drawable/btn_send_bg"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/visit"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    </ScrollView>

</RelativeLayout>
